--- a/app/views/pokemon/index.html.erb
+++ b/app/views/pokemon/index.html.erb
@@ -1,16 +1,28 @@
 <!-- app/views/pokemon/index.html.erb -->
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pokedexxed</title>
-  <%= stylesheet_link_tag 'styles', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <div class="center">
-    <h1>Pokedexxed</h1>
-    <h1> <%= link_to "National Dex", '/pokemon', class: "dexx-link" %> </h1>
-  </div>
-</body>
+  <head>
+    <title>Pokedexxed</title>
+    <%= stylesheet_link_tag 'styles', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="center">
+      <h1>Pokedexxed</h1>
+      <span class="centered">
+        <div class="indexblock">
+          <h2>
+            <%= link_to "National Dex", '/pokemon' %>
+          </h2>
+        </div>
+        <div class="indexblock">
+          <h2>
+            <%= link_to "Pokemon by Type", '/types' %>
+          </h2>
+        </div>
+      </span>
+    </div>
+  </body>
 </html>
