--- a/app/views/pokemon/index.html.erb
+++ b/app/views/pokemon/index.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="center">
-      <h1>Pokedexxed</h1>
+      <h1>Pokendex</h1>
       <span class="centered">
         <div class="indexblock">
           <h2>
