--- a/app/views/pokemon/nationaldex.html.erb
+++ b/app/views/pokemon/nationaldex.html.erb
@@ -1,4 +1,4 @@
-<h1 class="centered">Pokedexxed</h1>
+<h1 class="centered">Pokendex</h1>
 <a href="/" class="dex-link">Home</a>
 
 <% if @pokemon_data.present? %>
