--- a/app/views/pokemon/types.html.erb
+++ b/app/views/pokemon/types.html.erb
@@ -11,7 +11,7 @@
   <a href="/" class="dex-link">Home</a>
 
   <div class="center">
-    <h1>Pokemon Types</h1>
+    <h1>Pokendex</h1>
 
     <div class="row">
       <% @pokemon_types.each_slice(4) do |types_set| %>
