--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -16,7 +16,14 @@
   padding: 0;
   justify-content: space-between; 
 }
-
+.pokemon-id{
+color:white;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
 .pokemon-item {
   width: 8%;
   text-align: center;
