--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -186,7 +186,7 @@ body {
      background-color: #6890F0;
     }
      .type-bug{
-     background-color: #78C850;
+     background-color: #A8B820;
     }
     .stat-speed {
       background-color: #F85888;
